test/negative/unknown_type.mut
# Negative: declare variable with unknown type
x: Foo = 42
